--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Tower stuff</title>
     </head>
     <body>
-        <canvas id="canvas"></canvas>
+        <canvas id="canvas">Unsuported canvas, get out!</canvas>
         <script src="dist/built.js"></script>
     </body>
 </html>
